# GGEngine

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  imgui.ini
Editor/src/: EditorLayer.cpp  EditorLayer.h  main.cpp
Engine/assets/scenes/: default.scene  newscene.scene
Engine/assets/shaders/: basic.frag  basic.vert  flatcolor.frag  flatcolor.vert  quad2d.frag  quad2d.vert  quad2d_instanced.frag  quad2d_instanced.vert  texture.frag  texture.vert
Engine/src/: GGEngine.h  ggpch.h  test.cpp
Engine/src/GGEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.h
Engine/src/GGEngine/Asset/: Asset.h  AssetHandle.h  AssetManager.cpp  AssetManager.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  Texture.cpp  Texture.h  TextureLibrary.cpp  TextureLibrary.h  stb_image.cpp
Engine/src/GGEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  JobSystem.cpp  JobSystem.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Math.h  MouseButtonCodes.h  Profiler.cpp  Profiler.h  Result.h  TaskGraph.cpp  TaskGraph.h  Timestep.h  Window.h
Engine/src/GGEngine/Debug/: Instrumentor.cpp  Instrumentor.h
Engine/src/GGEngine/ECS/: ComponentRegistry.h  ComponentStorage.h  ComponentTraits.h  Components.h  DeferredCommands.cpp  DeferredCommands.h  Entity.h  GUID.cpp  GUID.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  System.h  SystemScheduler.cpp  SystemScheduler.h
Engine/src/GGEngine/ECS/Components/: CameraComponent.h  InterpolationComponent.h  SpriteRendererComponent.h  TagComponent.h  TilemapComponent.h  TransformComponent.h
Engine/src/GGEngine/ECS/Systems/: RenderSystem.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TilemapRenderSystem.cpp  TilemapRenderSystem.h
Engine/src/GGEngine/Events/: Event.h  KeyEvent.h  MouseEvent.h
Engine/src/GGEngine/ImGui/: DebugUI.cpp  DebugUI.h  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/GGEngine/ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h  Random.cpp  Random.h
Engine/src/GGEngine/RHI/: RHICommandBuffer.h  RHIDevice.h  RHIEnums.h  RHISpecifications.h  RHITypes.h
Engine/src/GGEngine/Renderer/: BindlessTextureManager.cpp  BindlessTextureManager.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  DescriptorSet.cpp  DescriptorSet.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  InstancedRenderer2D.cpp  InstancedRenderer2D.h  Material.cpp  Material.h  MaterialLibrary.cpp  MaterialLibrary.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  Renderer2D.cpp  Renderer2D.h  Renderer2DBase.cpp  Renderer2DBase.h  SceneCamera.cpp  SceneCamera.h  SubTexture2D.cpp  SubTexture2D.h  TextureAtlas.cpp  TextureAtlas.h  ThreadedCommandBuffer.cpp  ThreadedCommandBuffer.h  TransferQueue.cpp  TransferQueue.h  UniformBuffer.cpp  UniformBuffer.h  (+4 more)
Engine/src/GGEngine/Utils/: FileDialogs.cpp  FileDialogs.h  FileWatcher.cpp  FileWatcher.h
Engine/src/Platform/GLFW/: GLFWInput.cpp  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
Engine/src/Platform/Metal/: MetalContext.h  MetalContext.mm  MetalRHI.h  MetalRHI.mm  MetalUtils.h
Engine/src/Platform/Vulkan/: VulkanContext.cpp  VulkanContext.h  VulkanConversions.cpp  VulkanConversions.h  VulkanImGuiLayer.cpp  VulkanRHI.cpp  VulkanRHI.h  VulkanRHIBindless.cpp  VulkanRHICmd.cpp  VulkanRHIDevice.cpp  VulkanRHIPipelines.cpp  VulkanRHIRenderPass.cpp  VulkanRHIShaders.cpp  VulkanResourceRegistry.cpp  VulkanResourceRegistry.h  VulkanUtils.h  vma.cpp
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sandbox/src/: ExamplesLayer.cpp  ExamplesLayer.h  TriangleLayer.cpp  TriangleLayer.h  main.cpp
Sandbox/src/Examples/: ECSCameraExample.cpp  ECSCameraExample.h  ECSExample.cpp  ECSExample.h  Example.h  InputExample.cpp  InputExample.h  MultithreadingExample.cpp  MultithreadingExample.h  ParticleExample.cpp  ParticleExample.h  Renderer2DBasicsExample.cpp  Renderer2DBasicsExample.h  Renderer2DTexturesExample.cpp  Renderer2DTexturesExample.h  TimestepExample.cpp  TimestepExample.h
Tests/: CMakeLists.txt  TestConfig.h  TestMain.cpp
Tests/Concurrent/: JobSystemTests.cpp  TaskGraphTests.cpp
Tests/Core/: MathTests.cpp  TimestepTests.cpp
Tests/ECS/: ComponentStorageTests.cpp  EntityTests.cpp  GUIDTests.cpp  SceneIntegrationTests.cpp  TransformComponentTests.cpp
Tests/Renderer/: Mat4Tests.cpp
cmake/toolchains/: clang-mingw64.cmake
scripts/: build-all  build-all.bat  build-all.sh  build-editor  build-editor.bat  build-editor.sh  build-engine  build-engine.bat  build-engine.sh  build-sandbox  build-sandbox.bat  build-sandbox.sh  clean  clean.bat  clean.sh  clean_and_build  clean_and_build.bat  clean_and_build.sh  resolve-preset.bat  resolve-preset.sh
